[package]
name = "kreep"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
aes-gcm-siv = { version = "0.11.1", features = ["std"] }
anyhow = "1.0.97"
ciborium = "0.2.2"
clap = { version = "4.5.32", features = ["derive"] }
handlebars = "6.3.2"
hex = "0.4.3"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
sled = "0.34.7"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
